Better names for HTML classes used to style based on media queries.
Switched from CSS class names that are specific to the HTML content to
"functional CSS" names that reflect what style should be applied, and not what
element or component the style should be applied to.

--- a/talks.html
+++ b/talks.html
@@ -67,10 +67,14 @@
 
         <hr/>
 
-        <div class="row" id="cryptography">
+        <div class="row">
           <div class="eight columns offset-by-two">
             <div class="centered-text">
-              <img alt="The first slide from Dan's talk on public key cryptography." src="images/cryptography_slide.png"/>
+              <img
+                alt="The first slide from Dan's talk on public key cryptography."
+                class="full-width-at-1024px ninety-percent-width-at-560px"
+                src="images/cryptography_slide.png"
+              />
             </div>
 
             <hr/>
@@ -91,7 +95,11 @@
         <div class="row" id="machine-learning">
           <div class="eight columns offset-by-two">
             <div class="centered-text">
-              <img class="centered-text" alt="The first slide from Dan's talk on machine learning." src="images/machine_learning_slide.png"/>
+              <img
+                class="full-width-at-1024px ninety-percent-width-at-560px"
+                alt="The first slide from Dan's talk on machine learning."
+                src="images/machine_learning_slide.png"
+              />
             </div>
 
             <hr/>
