--- a/work.html
+++ b/work.html
@@ -75,25 +75,25 @@
             </a>
           </div>
         </div>
-      </div>
 
-      <div class="row padding-when-mobile">
-        <div class="eight columns offset-by-two">
-          <h2 class="centered-text">API development at Raizlabs</h2>
-          <p>
-            While at Raizlabs I lead development of a JSON API using Node.js, Express,
-            Redis, and MySQL to support Android, iOS, and web clients for a leading
-            fitness company's new in-home workout platform.
-          </p>
+        <div class="row padding-at-560px">
+          <div class="eight columns offset-by-two">
+            <h2 class="centered-text">API development at Raizlabs</h2>
+            <p>
+              While at Raizlabs I lead development of a JSON API using Node.js, Express,
+              Redis, and MySQL to support Android, iOS, and web clients for a leading
+              fitness company's new in-home workout platform.
+            </p>
 
-          <ul>
-            <li>Performance auditing and optimization of both the application and database layers.</li>
-            <li>Modern (ES6 via Babel) JavaScript written in a modular, functional style.</li>
-            <li>Adding services to, and interfacing with, the client's existing microservices architecture.</li>
-            <li>Excellent integration test coverage written in Mocha, and building on CircleCI.</li>
-            <li>API uptime monitoring with Runscope.</li>
-            <li>Stateless authentication using JSON Web Tokens.</li>
-          </ul>
+            <ul>
+              <li>Performance auditing and optimization of both the application and database layers.</li>
+              <li>Modern (ES6 via Babel) JavaScript written in a modular, functional style.</li>
+              <li>Adding services to, and interfacing with, the client's existing microservices architecture.</li>
+              <li>Excellent integration test coverage written in Mocha, and building on CircleCI.</li>
+              <li>API uptime monitoring with Runscope.</li>
+              <li>Stateless authentication using JSON Web Tokens.</li>
+            </ul>
+          </div>
         </div>
       </div>
     </section>
@@ -108,7 +108,7 @@
           </div>
         </div>
 
-        <div class="row padding-when-mobile">
+        <div class="row padding-at-560px">
           <div class="eight columns offset-by-two">
             <h2 class="centered-text">Enterprise applications at DrugDev</h2>
             <p>
@@ -147,7 +147,7 @@
           </div>
         </div>
 
-        <div class="row padding-when-mobile">
+        <div class="row padding-at-560px">
           <div class="eight columns offset-by-two">
             <h3 class="centered-text">Success in a small team at Kitewheel</h3>
             <p>
