--- a/index.html
+++ b/index.html
@@ -5,25 +5,36 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
     <meta content="
-      Dan Murphy is a software developer based in Boston, Massachusetts. He atteneded
-      the web development bootcamp Launch Academy in 2014 and has worked at Barbershop Labs,
-      Kitewheel, DrugDev, Raizlabs. Dan is experienced with such technologies as
-      Ruby on Rails, JavaScript, Node.js, React.js, Elixir, Phoenix, Git, Bash and
-      Shell scripts. He frequently uses tools such as Runscope, Postman, Atom, Vim,
-      Github, Trello, Jira, Charles, Wireshark, and iTerm. Like any good engineer
-      Dan prides himself of continuing to learn and improve. Currently he is focusing
-      on machine learning and functional programming. Previous passions have included
-      object-oriented design, database design, and automated testing.
+      Welcome! Dan Murphy is a software developer based in Boston, Massachusetts.
+
+      Drop me a line at murphydbuffalo@gmail.com
+
+      He attended the web development bootcamp Launch Academy in 2014 and has worked
+      at Barbershop Labs, Kitewheel, DrugDev, and Raizlabs.
+
+      Dan is experienced with such technologies as Ruby on Rails, JavaScript, Node.js,
+      React.js, Elixir, Phoenix, Git, SQL (Postgres, MySQL), Matlab, NoSQL (MongoDB),
+      and the Unix command line.
+
+      He frequently uses tools such as Google Analytics, NewRelic, RisingStack,
+      Runscope, Postman, Vim, Github, Trello, Jira, Charles, Wireshark, and iTerm.
+
+      Dan is familiar with Agile and Extreme Programming (XP) practices such as
+      scrum pair programming, and TDD.
+
+      Like any good engineer Dan prides himself on continuing to learn, and his
+      current passions are machine learning and functional programming.
+
+      Dan is well versed in object-oriented design, relational database design, and automated testing.
     " name="description">
 
     <meta content="
-      boston rails developers, boston rails development, boston elixir development,
-      ruby, rails, elixir, phoenix, ruby on rails, saas boston, cloud, node, bootstrap,
-      elixir programmers, rails programmers, rails coders, ruby coders, rails application
-      development, rails app development, phoenix development, boston elixir, boston rails,
-      boston ruby on rails, boston programmers, boston developers, web application development
-      boston machine learning, machine learning, boston artificial intelligence,
-      artificial intelligence, boston ai, machine learning algorithms, machine learning algorithm development
+      Dan Murphy developer, Dan Murphy software developer, Dan Murphy software,
+      Dan Murphy software development, Dan Murphy software engineer, Dan Murphy engineer,
+      Dan Murphy Ruby, Dan Murphy JavaScript, Dan Murphy JS, Dan Murphy Rails,
+      Dan Murphy Ruby on Rails, Dan Murphy Node, Dan Murphy Node.js, Dan Murphy React,
+      Dan Murphy React.js, Dan Murphy Elixir, Dan Murphy Phoenix, Dan Murphy machine learning,
+      Dan Murphy AI, Dan Murphy artificial intelligence, Dan Murphy analytics, Dan Murphy
     " name="keywords">
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Architects+Daughter|Droid+Sans">
