Add LinkedIn link to "about" page.

--- a/about.html
+++ b/about.html
@@ -2,7 +2,9 @@
   <div class="container">
     <div class="row">
       <div class="four columns offset-by-four centered-text">
-        <h1>Hi, I'm Dan</h1>
+        <a href="https://www.linkedin.com/in/danmurphydev" target="_blank">
+          <h1>Hi, I'm Dan</h1>
+        </a>
       </div>
     </div>
 
