Updated SEO keywords.

--- a/template.html
+++ b/template.html
@@ -7,8 +7,6 @@
     <meta content="
       Welcome! Dan Murphy is a software developer based in Boston, Massachusetts.
 
-      Drop me a line at murphydbuffalo@gmail.com
-
       He attended the web development bootcamp Launch Academy in 2014 and has worked
       at Barbershop Labs, Kitewheel, DrugDev, and Raizlabs.
 
@@ -17,10 +15,10 @@
       and the Unix command line.
 
       He frequently uses tools such as Google Analytics, NewRelic, RisingStack,
-      Runscope, Postman, Vim, Github, Trello, Jira, Charles, Wireshark, and iTerm.
+      Runscope, Postman, Vim, Atom, Github, Trello, Jira, Charles, Wireshark, and iTerm.
 
       Dan is familiar with Agile and Extreme Programming (XP) practices such as
-      scrum pair programming, and TDD.
+      scrum, pair programming, and TDD.
 
       Like any good engineer Dan prides himself on continuing to learn, and his
       current passions are machine learning and functional programming.
@@ -29,12 +27,13 @@
     " name="description">
 
     <meta content="
+      Dan Murphy codes, danmurphy.codes, Dan Murphy, Dan Murphy Boulder,
       Dan Murphy developer, Dan Murphy software developer, Dan Murphy software,
       Dan Murphy software development, Dan Murphy software engineer, Dan Murphy engineer,
       Dan Murphy Ruby, Dan Murphy JavaScript, Dan Murphy JS, Dan Murphy Rails,
       Dan Murphy Ruby on Rails, Dan Murphy Node, Dan Murphy Node.js, Dan Murphy React,
       Dan Murphy React.js, Dan Murphy Elixir, Dan Murphy Phoenix, Dan Murphy machine learning,
-      Dan Murphy AI, Dan Murphy artificial intelligence, Dan Murphy analytics, Dan Murphy
+      Dan Murphy AI, Dan Murphy artificial intelligence, Dan Murphy analytics
     " name="keywords">
 
     <link rel="stylesheet" media="all" href="index.min.css" />
