Update and simplify description meta tag

--- a/template.html
+++ b/template.html
@@ -1,30 +1,10 @@
 <!DOCTYPE HTML>
 <html lang="en">
   <head>
-    <title>Dan Murphy - Software Developer in Boston, MA</title>
+    <title>Dan Murphy - Software Developer in Boulder, CO</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
-    <meta content="
-      Welcome! Dan Murphy is a software developer based in Boston, Massachusetts.
-
-      He attended the web development bootcamp Launch Academy in 2014 and has worked
-      at Barbershop Labs, Kitewheel, DrugDev, and Raizlabs.
-
-      Dan is experienced with such technologies as Ruby on Rails, JavaScript, Node.js,
-      React.js, Elixir, Phoenix, Git, SQL (Postgres, MySQL), Matlab, NoSQL (MongoDB),
-      and the Unix command line.
-
-      He frequently uses tools such as Google Analytics, NewRelic, RisingStack,
-      Runscope, Postman, Vim, Atom, Github, Trello, Jira, Charles, Wireshark, and iTerm.
-
-      Dan is familiar with Agile and Extreme Programming (XP) practices such as
-      scrum, pair programming, and TDD.
-
-      Like any good engineer Dan prides himself on continuing to learn, and his
-      current passions are machine learning and functional programming.
-
-      Dan is well versed in object-oriented design, relational database design, and automated testing.
-    " name="description">
+    <meta content="Welcome! Dan Murphy is a software developer working for Bonusly in Boulder, Colorado." name="description">
 
     <meta content="
       Dan Murphy codes, danmurphy.codes, Dan Murphy, Dan Murphy Boulder,
