--- a/template.html
+++ b/template.html
@@ -7,13 +7,10 @@
     <meta content="Welcome! Dan Murphy is a software developer working for Bonusly in Boulder, Colorado." name="description">
 
     <meta content="
-      Dan Murphy codes, danmurphy.codes, Dan Murphy, Dan Murphy Boulder,
-      Dan Murphy developer, Dan Murphy software developer, Dan Murphy software,
-      Dan Murphy software development, Dan Murphy software engineer, Dan Murphy engineer,
-      Dan Murphy Ruby, Dan Murphy JavaScript, Dan Murphy JS, Dan Murphy Rails,
-      Dan Murphy Ruby on Rails, Dan Murphy Node, Dan Murphy Node.js, Dan Murphy React,
-      Dan Murphy React.js, Dan Murphy Elixir, Dan Murphy Phoenix, Dan Murphy machine learning,
-      Dan Murphy AI, Dan Murphy artificial intelligence, Dan Murphy analytics
+      danmurphy.codes, Dan Murphy Boulder, Dan Murphy, Dan Murphy software,
+      Dan Murphy software developer, Dan Murphy Ruby, Dan Murphy Rails,
+      Dan Murphy Ruby on Rails, Dan Murphy Elixir, Dan Murphy Phoenix,
+      Dan Murphy machine learning
     " name="keywords">
 
     <link rel="stylesheet" media="all" href="index.min.css" />
