Less brittle meta description

--- a/template.html
+++ b/template.html
@@ -4,7 +4,7 @@
     <title>Dan Murphy - Software Developer in Boulder, CO</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
-    <meta content="Welcome! Dan Murphy is a software developer working for Bonusly in Boulder, Colorado." name="description">
+    <meta content="Welcome! Dan Murphy is a software developer based in Boulder, Colorado." name="description">
 
     <meta content="
       danmurphy.codes, Dan Murphy Boulder, Dan Murphy, Dan Murphy software,
