Fix tumblr icon

--- a/template.html
+++ b/template.html
@@ -35,7 +35,7 @@
           <ul>
             <li>
               <a target="_blank" href="https://murphydbuffalo.tumblr.com/">
-                <i class="fab fa-linkedin"></i>
+                <i class="fab fa-tumblr-square"></i>
               </a>
             </li>
 
