--- a/template.html
+++ b/template.html
@@ -61,6 +61,33 @@
     </header>
 
     <main class="row">
+      <section id="talk" class="six columns offset-by-three">
+        <h1>Talks</h1>
+
+        <div>
+          <iframe
+             class="video"
+             src="https://player.vimeo.com/video/217214978"
+             width="640"
+             height="360"
+             frameborder="0"
+             webkitallowfullscreen
+             mozallowfullscreen
+             allowfullscreen>
+          </iframe>
+
+          <p>
+            <a href="https://vimeo.com/217214978">Cryptography in Colors: Public Key Cryptography</a> from <a href="https://vimeo.com/raizlabs">Raizlabs</a> on <a href="https://vimeo.com">Vimeo</a>.
+          </p>
+        </div>
+
+        <p>
+          A math-light explanation of one of the core technologies of the internet:
+          public key cryptography. We'll use visuals and metaphors from Brit Cruise's
+          <a href="https://www.youtube.com/user/ArtOfTheProblem" target="_blank">
+             Art of the Problem</a> video series on YouTube to explore this topic in-depth.
+        </p>
+      </section>
     </main>
   </body>
 </html>
