--- a/template.html
+++ b/template.html
@@ -28,7 +28,9 @@
     <header class="row">
       <div id="modal">
         <div id="headshot">
-          <img alt="A snazzy picture of Dan" height="400" width="400" src="images/profile-pic.jpg"\>
+          <a href="mailto:murphydbuffalo@gmail.com" target="_blank">
+            <img alt="A snazzy picture of Dan" height="400" width="400" src="images/profile-pic.jpg"\>
+          </a>
         </div>
         <div id="about-me">
           <h1>Dan Murphy</h1>
