Get the rows right

--- a/template.html
+++ b/template.html
@@ -25,7 +25,7 @@
     <meta name="theme-color" content="#ffffff">
   </head>
   <body>
-    <header class="row">
+    <header>
       <div id="modal">
         <div id="headshot">
           <a href="mailto:murphydbuffalo@gmail.com" target="_blank">
@@ -62,33 +62,35 @@
         </div>
     </header>
 
-    <main class="row">
-      <section id="talk" class="six columns offset-by-three">
-        <h1>Talks</h1>
+    <main>
+      <section id="talk" class="row">
+        <div class="six columns offset-by-three">
+          <h1>Talks</h1>
 
-        <div>
-          <iframe
-             class="video"
-             src="https://player.vimeo.com/video/217214978"
-             width="640"
-             height="360"
-             frameborder="0"
-             webkitallowfullscreen
-             mozallowfullscreen
-             allowfullscreen>
-          </iframe>
+          <div>
+            <iframe
+               class="video"
+               src="https://player.vimeo.com/video/217214978"
+               width="640"
+               height="360"
+               frameborder="0"
+               webkitallowfullscreen
+               mozallowfullscreen
+               allowfullscreen>
+            </iframe>
+
+            <p>
+              <a href="https://vimeo.com/217214978">Cryptography in Colors: Public Key Cryptography</a> from <a href="https://vimeo.com/raizlabs">Raizlabs</a> on <a href="https://vimeo.com">Vimeo</a>.
+            </p>
+          </div>
 
           <p>
-            <a href="https://vimeo.com/217214978">Cryptography in Colors: Public Key Cryptography</a> from <a href="https://vimeo.com/raizlabs">Raizlabs</a> on <a href="https://vimeo.com">Vimeo</a>.
+            A math-light explanation of one of the core technologies of the internet:
+            public key cryptography. We'll use visuals and metaphors from Brit Cruise's
+            <a href="https://www.youtube.com/user/ArtOfTheProblem" target="_blank">
+               Art of the Problem</a> video series on YouTube to explore this topic in-depth.
           </p>
         </div>
-
-        <p>
-          A math-light explanation of one of the core technologies of the internet:
-          public key cryptography. We'll use visuals and metaphors from Brit Cruise's
-          <a href="https://www.youtube.com/user/ArtOfTheProblem" target="_blank">
-             Art of the Problem</a> video series on YouTube to explore this topic in-depth.
-        </p>
       </section>
     </main>
   </body>
