--- a/template.html
+++ b/template.html
@@ -33,7 +33,13 @@
           </a>
         </div>
         <div id="about-me">
-          <h1>Dan Murphy</h1>
+
+          <h1>
+            <a href="mailto:murphydbuffalo@gmail.com" target="_blank">
+              Dan Murphy
+            </a>
+          </h1>
+
           <ul>
             <li>
               <a target="_blank" href="https://murphydbuffalo.tumblr.com/">
