Add in rough version of recommendations

--- a/template.html
+++ b/template.html
@@ -69,6 +69,57 @@
     </header>
 
     <main>
+      <section id="recommendations" class="row">
+        <div class="six columns offset-by-three">
+          <h1>Recommendations</h1>
+
+          <div>
+            <h3>Josh Wilson</h2>
+            <h5>VP of Product Management at Raizlabs</h5>
+            <p>
+              <em>
+                Dan is an extremely effective developer because his communication skills
+                are as strong as his technical ability and he understands the value
+                of flexibility and empathy when working in a team. He also has an infectious
+                enthusiasm for the craft of software and picks up new languages, patterns,
+                and technologies very quickly.
+              </em>
+            </p>
+          </div>
+
+          <div>
+            <h3>Jeremiah Atwood</h2>
+            <h5>Web Platform Lead at Raizlabs</h5>
+            <p>
+              <em>
+                Dan is an avid technologist who is always teaching himself new concepts
+                and technologies. On a recent Android and API project, he jumped in and
+                took over the API work, working directly with client developers to deliver
+                an ambitious product. Dan was also instrumental in kicking off an initiative
+                to record our internal Tech Talks and share them with the community.
+                His presentation on encryption was informative, well-researched, well-rehearsed
+                and demonstrated his grasp of a complex subject. Dan is definitely someone
+                you want on your team.
+              </em>
+            </p>
+          </div>
+
+          <div>
+            <h3>Matt Buckley</h3>
+            <h5>Mobile Engineer at Raizlabs</h5>
+            <p>
+              <em>
+                Dan consistently delivers high-quality code, asking probing questions
+                to clarify requirements and ensuring that features are completed to
+                spec and ahead of schedule. He boasts a wide-ranging skill set. Given
+                a set of requirements, Dan draws on expertise in Ruby, JavaScript, and
+                Elixir. He's friendly, fun-loving, and a true asset to any engineering
+                team. I'd gladly work with Dan again any time.
+              </em>
+            </p>
+          </div>
+        </div>
+      </section>
       <section id="talk" class="row">
         <div class="six columns offset-by-three">
           <h1>Talks</h1>
