Use mail icon for `mailto` links.
And add `title` properties to key links, headers, and images.

--- a/template.html
+++ b/template.html
@@ -28,40 +28,40 @@
     <header>
       <div id="modal">
         <div id="headshot">
-          <a href="mailto:murphydbuffalo@gmail.com" target="_blank">
-            <img alt="A snazzy picture of Dan" height="400" width="400" src="images/profile-pic.jpg"\>
-          </a>
+          <img title="Huge nerd" alt="A snazzy picture of Dan" height="400" width="400" src="images/profile-pic.jpg"\>
         </div>
-        <div id="about-me">
 
-          <h1>
-            <a href="mailto:murphydbuffalo@gmail.com" target="_blank">
-              Dan Murphy
-            </a>
-          </h1>
+        <div id="about-me">
+          <h1 title="Huge nerd">Dan Murphy</h1>
 
           <ul>
             <li>
-              <a target="_blank" href="https://murphydbuffalo.tumblr.com/">
+              <a title="Tumblr" target="_blank" href="https://murphydbuffalo.tumblr.com/">
                 <i class="fab fa-tumblr-square"></i>
               </a>
             </li>
 
             <li>
-              <a target="_blank" href="https://github.com/Murphydbuffalo">
+              <a title="GitHub" target="_blank" href="https://github.com/Murphydbuffalo">
                 <i class="fab fa-github"></i>
               </a>
             </li>
 
             <li>
-              <a target="_blank" href="https://www.linkedin.com/in/danmurphydev/">
+              <a title="LinkedIn" target="_blank" href="https://www.linkedin.com/in/danmurphydev/">
                 <i class="fab fa-linkedin"></i>
               </a>
             </li>
 
             <li>
-              <a target="_blank" href="https://angel.co/dan-murphy-9">
+              <a title="AngelList" target="_blank" href="https://angel.co/dan-murphy-9">
                 <i class="fab fa-angellist"></i>
+              </a>
+            </li>
+
+            <li>
+              <a title="Email" target="_blank" href="mailto:murphydbuffalo@gmail.com">
+                <i class="fas fa-envelope"></i>
               </a>
             </li>
           </ul>
