Put quotes inside of cards

--- a/template.html
+++ b/template.html
@@ -66,6 +66,7 @@
             </li>
           </ul>
         </div>
+      </div>
     </header>
 
     <main>
@@ -73,7 +74,7 @@
         <div class="six columns offset-by-three">
           <h1>Recommendations</h1>
 
-          <div>
+          <div class="card">
             <h3>Josh Wilson</h2>
             <h5>VP of Product Management at Raizlabs</h5>
             <p>
@@ -87,7 +88,7 @@
             </p>
           </div>
 
-          <div>
+          <div class="card">
             <h3>Jeremiah Atwood</h2>
             <h5>Web Platform Lead at Raizlabs</h5>
             <p>
@@ -104,7 +105,7 @@
             </p>
           </div>
 
-          <div>
+          <div class="card">
             <h3>Matt Buckley</h3>
             <h5>Mobile Engineer at Raizlabs</h5>
             <p>
