Use `blockquote` tags

--- a/template.html
+++ b/template.html
@@ -91,7 +91,7 @@
           <div class="card">
             <h3>Jeremiah Atwood</h2>
             <h5>Web Platform Lead at Raizlabs</h5>
-            <p>
+            <blockquote>
               <em>
                 Dan is an avid technologist who is always teaching himself new concepts
                 and technologies. On a recent Android and API project, he jumped in and
@@ -102,13 +102,13 @@
                 and demonstrated his grasp of a complex subject. Dan is definitely someone
                 you want on your team.
               </em>
-            </p>
+            </blockquote>
           </div>
 
           <div class="card">
             <h3>Matt Buckley</h3>
             <h5>Mobile Engineer at Raizlabs</h5>
-            <p>
+            <blockquote>
               <em>
                 Dan consistently delivers high-quality code, asking probing questions
                 to clarify requirements and ensuring that features are completed to
@@ -117,7 +117,7 @@
                 Elixir. He's friendly, fun-loving, and a true asset to any engineering
                 team. I'd gladly work with Dan again any time.
               </em>
-            </p>
+            </blockquote>
           </div>
         </div>
       </section>
