Put video inside a card

--- a/template.html
+++ b/template.html
@@ -121,11 +121,11 @@
           </div>
         </div>
       </section>
-      <section id="talk" class="row">
-        <div class="six columns offset-by-three">
+      <section id="talks" class="row">
+        <div class="eight columns offset-by-two">
           <h1>Talks</h1>
 
-          <div>
+          <div class="card">
             <iframe
                class="video"
                src="https://player.vimeo.com/video/217214978"
@@ -140,14 +140,14 @@
             <p>
               <a href="https://vimeo.com/217214978">Cryptography in Colors: Public Key Cryptography</a> from <a href="https://vimeo.com/raizlabs">Raizlabs</a> on <a href="https://vimeo.com">Vimeo</a>.
             </p>
-          </div>
 
-          <p>
-            A math-light explanation of one of the core technologies of the internet:
-            public key cryptography. We'll use visuals and metaphors from Brit Cruise's
-            <a href="https://www.youtube.com/user/ArtOfTheProblem" target="_blank">
-               Art of the Problem</a> video series on YouTube to explore this topic in-depth.
-          </p>
+            <p>
+              A math-light explanation of one of the core technologies of the internet:
+              public key cryptography. We'll use visuals and metaphors from Brit Cruise's
+              <a href="https://www.youtube.com/user/ArtOfTheProblem" target="_blank">
+                 Art of the Problem</a> video series on YouTube to explore this topic in-depth.
+            </p>
+          </div>
         </div>
       </section>
     </main>
