--- a/template.html
+++ b/template.html
@@ -71,7 +71,7 @@
 
     <main>
       <section id="recommendations" class="row">
-        <div class="six columns offset-by-three">
+        <div class="eight columns offset-by-two">
           <h1>Recommendations</h1>
 
           <div class="card">
