Link to recommenders' linkedin pages

--- a/template.html
+++ b/template.html
@@ -75,9 +75,15 @@
           <h1>Recommendations</h1>
 
           <div class="card">
-            <h3>Josh Wilson</h2>
+            <h3>
+              <a href="https://www.linkedin.com/in/josh-wilson-6052081" target="_blank">
+                Josh Wilson
+              </a>
+            </h3>
+
             <h5>VP of Product Management at Raizlabs</h5>
-            <p>
+
+            <blockquote>
               <em>
                 Dan is an extremely effective developer because his communication skills
                 are as strong as his technical ability and he understands the value
@@ -85,12 +91,18 @@
                 enthusiasm for the craft of software and picks up new languages, patterns,
                 and technologies very quickly.
               </em>
-            </p>
+            </blockquote>
           </div>
 
           <div class="card">
-            <h3>Jeremiah Atwood</h2>
+            <h3>
+              <a href="https://www.linkedin.com/in/jeremiahatwood/" target="_blank">
+                Jeremiah Atwood
+              </a>
+            </h3>
+
             <h5>Web Platform Lead at Raizlabs</h5>
+
             <blockquote>
               <em>
                 Dan is an avid technologist who is always teaching himself new concepts
@@ -106,8 +118,14 @@
           </div>
 
           <div class="card">
-            <h3>Matt Buckley</h3>
+            <h3>
+              <a href="https://www.linkedin.com/in/mattbuckley1/" target="_blank">
+                Matt Buckley
+              </a>
+            </h3>
+
             <h5>Mobile Engineer at Raizlabs</h5>
+
             <blockquote>
               <em>
                 Dan consistently delivers high-quality code, asking probing questions
