--- a/template.html
+++ b/template.html
@@ -77,7 +77,9 @@
           <div class="card">
             <h3>
               <a href="https://www.linkedin.com/in/josh-wilson-6052081" target="_blank">
-                Josh Wilson
+                <strong>
+                  Josh Wilson
+                </strong>
               </a>
             </h3>
 
@@ -97,7 +99,9 @@
           <div class="card">
             <h3>
               <a href="https://www.linkedin.com/in/jeremiahatwood/" target="_blank">
-                Jeremiah Atwood
+                <strong>
+                  Jeremiah Atwood
+                </strong>
               </a>
             </h3>
 
@@ -120,7 +124,9 @@
           <div class="card">
             <h3>
               <a href="https://www.linkedin.com/in/mattbuckley1/" target="_blank">
-                Matt Buckley
+                <strong>
+                  Matt Buckley
+                </strong>
               </a>
             </h3>
 
