Consistent linking strategy

--- a/template.html
+++ b/template.html
@@ -76,10 +76,12 @@
 
           <div class="card">
             <h3>
-              <a href="https://www.linkedin.com/in/josh-wilson-6052081" target="_blank">
-                <strong>
-                  Josh Wilson
-                </strong>
+              <strong>
+                Josh Wilson
+              </strong>
+
+              <a title="LinkedIn" target="_blank" href="https://www.linkedin.com/in/danmurphydev/">
+                <i class="fab fa-linkedin"></i>
               </a>
             </h3>
 
@@ -98,10 +100,12 @@
 
           <div class="card">
             <h3>
+              <strong>
+                Jeremiah Atwood
+              </strong>
+
               <a href="https://www.linkedin.com/in/jeremiahatwood/" target="_blank">
-                <strong>
-                  Jeremiah Atwood
-                </strong>
+                <i class="fab fa-linkedin"></i>
               </a>
             </h3>
 
@@ -123,10 +127,12 @@
 
           <div class="card">
             <h3>
+              <strong>
+                Matt Buckley
+              </strong>
+
               <a href="https://www.linkedin.com/in/mattbuckley1/" target="_blank">
-                <strong>
-                  Matt Buckley
-                </strong>
+                <i class="fab fa-linkedin"></i>
               </a>
             </h3>
 
