--- a/template.html
+++ b/template.html
@@ -80,7 +80,7 @@
                 Josh Wilson
               </strong>
 
-              <a title="LinkedIn" target="_blank" href="https://www.linkedin.com/in/josh-wilson-6052081/">
+              <a target="_blank" href="https://www.linkedin.com/in/josh-wilson-6052081/">
                 <i class="fab fa-linkedin"></i>
               </a>
             </h3>
