Add job title subheading

--- a/template.html
+++ b/template.html
@@ -33,38 +33,41 @@
 
         <div id="about-me">
           <h1 title="Huge nerd">Dan Murphy</h1>
+          <div class="subheading">
+            <h5><em>Software Developer</em></h6>
 
-          <ul>
-            <li>
-              <a title="Tumblr" target="_blank" href="https://murphydbuffalo.tumblr.com/">
-                <i class="fab fa-tumblr-square"></i>
-              </a>
-            </li>
+            <ul>
+              <li>
+                <a title="Tumblr" target="_blank" href="https://murphydbuffalo.tumblr.com/">
+                  <i class="fab fa-tumblr-square"></i>
+                </a>
+              </li>
 
-            <li>
-              <a title="GitHub" target="_blank" href="https://github.com/Murphydbuffalo">
-                <i class="fab fa-github"></i>
-              </a>
-            </li>
+              <li>
+                <a title="GitHub" target="_blank" href="https://github.com/Murphydbuffalo">
+                  <i class="fab fa-github"></i>
+                </a>
+              </li>
 
-            <li>
-              <a title="LinkedIn" target="_blank" href="https://www.linkedin.com/in/danmurphydev/">
-                <i class="fab fa-linkedin"></i>
-              </a>
-            </li>
+              <li>
+                <a title="LinkedIn" target="_blank" href="https://www.linkedin.com/in/danmurphydev/">
+                  <i class="fab fa-linkedin"></i>
+                </a>
+              </li>
 
-            <li>
-              <a title="AngelList" target="_blank" href="https://angel.co/dan-murphy-9">
-                <i class="fab fa-angellist"></i>
-              </a>
-            </li>
+              <li>
+                <a title="AngelList" target="_blank" href="https://angel.co/dan-murphy-9">
+                  <i class="fab fa-angellist"></i>
+                </a>
+              </li>
 
-            <li>
-              <a title="Email" target="_blank" href="mailto:murphydbuffalo@gmail.com">
-                <i class="fas fa-envelope"></i>
-              </a>
-            </li>
-          </ul>
+              <li>
+                <a title="Email" target="_blank" href="mailto:murphydbuffalo@gmail.com">
+                  <i class="fas fa-envelope"></i>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </header>
