Add a section about open source projects

--- a/template.html
+++ b/template.html
@@ -73,6 +73,35 @@
     </header>
 
     <main>
+      <section id="projects" class="row">
+        <div class="eight columns offset-by-two">
+          <h1>Open Source Projects</h1>
+
+          <div id="smile-o-meter" class="card">
+            <h3>
+              <strong>Smile-O-Meter</strong>
+              <a target="_blank" href="https://www.github.com/murphydbuffalo/smile-o-meter/">
+                <i class="fab fa-github"></i>
+              </a>
+            </h3>
+
+            <a target="_blank" href="https://www.github.com/murphydbuffalo/smile-o-meter/">
+              <img alt="A picture of the Smile-O-Meter open source project" src="images/smile-o-meter.png"/>
+            </a>
+
+            <p>
+              The Smile-O-Meter (under active development) is a neural network
+              used to classify images as one of seven emotions. It is written
+              "from scratch", that is, without the use of framework such as
+              TensorFlow and Keras. My main goal in working on the Smile-O-Meter
+              was to learn more about machine learning, neural nets, and Python,
+              and to that end it's been a success! In the future I'll be publishing
+              blog posts that describe the architecture and effectiveness of the
+              system.
+            </p>
+          </div>
+        </div>
+      </section>
       <section id="recommendations" class="row">
         <div class="eight columns offset-by-two">
           <h1>Recommendations</h1>
