Bigger link areas

--- a/template.html
+++ b/template.html
@@ -79,8 +79,8 @@
 
           <div id="smile-o-meter" class="card">
             <h3>
-              <strong>Smile-O-Meter</strong>
               <a target="_blank" href="https://www.github.com/murphydbuffalo/smile-o-meter/">
+                <strong>Smile-O-Meter</strong>
                 <i class="fab fa-github"></i>
               </a>
             </h3>
@@ -108,17 +108,14 @@
           <h1>Recommendations</h1>
 
           <div class="card">
-            <h3>
-              <strong>
-                Josh Wilson
-              </strong>
-
-              <a target="_blank" href="https://www.linkedin.com/in/josh-wilson-6052081/">
+            <a target="_blank" href="https://www.linkedin.com/in/josh-wilson-6052081/">
+              <h3>
+                <strong>Josh Wilson</strong>
                 <i class="fab fa-linkedin"></i>
-              </a>
-            </h3>
+              </h3>
 
-            <h5>VP of Product Management at Raizlabs</h5>
+              <h5>VP of Product Management at Raizlabs</h5>
+            </a>
 
             <blockquote>
               <em>
@@ -132,17 +129,14 @@
           </div>
 
           <div class="card">
-            <h3>
-              <strong>
-                Jeremiah Atwood
-              </strong>
-
-              <a href="https://www.linkedin.com/in/jeremiahatwood/" target="_blank">
+            <a href="https://www.linkedin.com/in/jeremiahatwood/" target="_blank">
+              <h3>
+                <strong>Jeremiah Atwood</strong>
                 <i class="fab fa-linkedin"></i>
-              </a>
-            </h3>
+              </h3>
 
-            <h5>Web Platform Lead at Raizlabs</h5>
+              <h5>Web Platform Lead at Raizlabs</h5>
+            </a>
 
             <blockquote>
               <em>
@@ -159,17 +153,14 @@
           </div>
 
           <div class="card">
-            <h3>
-              <strong>
-                Matt Buckley
-              </strong>
-
-              <a href="https://www.linkedin.com/in/mattbuckley1/" target="_blank">
+            <a href="https://www.linkedin.com/in/mattbuckley1/" target="_blank">
+              <h3>
+                <strong>Matt Buckley</strong>
                 <i class="fab fa-linkedin"></i>
-              </a>
-            </h3>
+              </h3>
 
-            <h5>Mobile Engineer at Raizlabs</h5>
+              <h5>Mobile Engineer at Raizlabs</h5>
+            </a>
 
             <blockquote>
               <em>
