--- a/template.html
+++ b/template.html
@@ -92,7 +92,7 @@
             <p>
               The Smile-O-Meter (under active development) is a neural network
               used to classify images as one of seven emotions. It is written
-              "from scratch", that is, without the use of framework such as
+              "from scratch", that is, without the use of frameworks such as
               TensorFlow and Keras. My main goal in working on the Smile-O-Meter
               was to learn more about machine learning, neural nets, and Python,
               and to that end it's been a success! In the future I'll be publishing
