--- a/template.html
+++ b/template.html
@@ -28,13 +28,13 @@
     <header>
       <div id="modal">
         <div id="headshot">
-          <img title="Huge nerd" alt="A snazzy picture of Dan" height="400" width="400" src="images/profile-pic.jpg"\>
+          <img title="Huge nerd" alt="A snazzy picture of Dan" height="400" width="400" src="images/profile-pic.jpg" />
         </div>
 
         <div id="about-me">
           <h1 title="Huge nerd">Dan Murphy</h1>
           <div class="subheading">
-            <h5><em>Software Developer</em></h6>
+            <h5><em>Software Developer</em></h5>
 
             <ul>
               <li>
@@ -86,7 +86,7 @@
             </h3>
 
             <a target="_blank" href="https://www.github.com/murphydbuffalo/smile-o-meter/">
-              <img alt="A picture of the Smile-O-Meter open source project" src="images/smile-o-meter.png"/>
+              <img alt="A picture of the Smile-O-Meter open source project" src="images/smile-o-meter.png" />
             </a>
 
             <p>
@@ -186,9 +186,6 @@
                src="https://player.vimeo.com/video/217214978"
                width="640"
                height="360"
-               frameborder="0"
-               webkitallowfullscreen
-               mozallowfullscreen
                allowfullscreen>
             </iframe>
 
