Update email address

--- a/template.html
+++ b/template.html
@@ -62,7 +62,7 @@
               </li>
 
               <li>
-                <a title="Email" target="_blank" href="mailto:murphydbuffalo@gmail.com">
+                <a title="Email" target="_blank" href="mailto:hello@danmurphy.codes">
                   <i class="fas fa-envelope"></i>
                 </a>
               </li>
