--- a/template.html
+++ b/template.html
@@ -78,27 +78,29 @@
           <h1>Open Source Projects</h1>
 
           <div id="smile-o-meter" class="card">
-            <h3>
+            <div class="vertical-align-wrapper">
+              <h3>
+                <a target="_blank" href="https://www.github.com/murphydbuffalo/smile-o-meter/">
+                  <strong>Smile-O-Meter</strong>
+                  <i class="fab fa-github"></i>
+                </a>
+              </h3>
+
               <a target="_blank" href="https://www.github.com/murphydbuffalo/smile-o-meter/">
-                <strong>Smile-O-Meter</strong>
-                <i class="fab fa-github"></i>
+                <img alt="A picture of the Smile-O-Meter open source project" src="images/smile-o-meter.png" />
               </a>
-            </h3>
 
-            <a target="_blank" href="https://www.github.com/murphydbuffalo/smile-o-meter/">
-              <img alt="A picture of the Smile-O-Meter open source project" src="images/smile-o-meter.png" />
-            </a>
-
-            <p>
-              The Smile-O-Meter (under active development) is a neural network
-              used to classify images as one of seven emotions. It is written
-              "from scratch", that is, without the use of frameworks such as
-              TensorFlow and Keras. My main goal in working on the Smile-O-Meter
-              was to learn more about machine learning, neural nets, and Python,
-              and to that end it's been a success! In the future I'll be publishing
-              blog posts that describe the architecture and effectiveness of the
-              system.
-            </p>
+              <p>
+                The Smile-O-Meter (under development) is a neural network
+                used to classify images as one of seven emotions. It is written
+                "from scratch", that is, without the use of frameworks such as
+                TensorFlow and Keras. My main goal in working on the Smile-O-Meter
+                was to learn more about machine learning, neural nets, and Python,
+                and to that end it's been a success! In the future I'll be publishing
+                blog posts that describe the architecture and effectiveness of the
+                system.
+              </p>
+            </div>
           </div>
         </div>
       </section>
@@ -108,71 +110,97 @@
           <h1>Recommendations</h1>
 
           <div class="card">
-            <a target="_blank" href="https://www.linkedin.com/in/josh-wilson-6052081/">
-              <h3>
-                <strong>Josh Wilson</strong>
-                <i class="fab fa-linkedin"></i>
-              </h3>
+            <div class="vertical-align-wrapper">
+              <a target="_blank" href="https://www.linkedin.com/in/josh-wilson-6052081/">
+                <h3>
+                  <strong>Josh Wilson</strong>
+                  <i class="fab fa-linkedin"></i>
+                </h3>
 
-              <h5>VP of Product Management at Raizlabs</h5>
-            </a>
+                <h5>VP of Product Management at Raizlabs</h5>
+              </a>
 
-            <blockquote>
-              <em>
-                Dan is an extremely effective developer because his communication skills
-                are as strong as his technical ability and he understands the value
-                of flexibility and empathy when working in a team. He also has an infectious
-                enthusiasm for the craft of software and picks up new languages, patterns,
-                and technologies very quickly.
-              </em>
-            </blockquote>
+              <blockquote>
+                <em>
+                  Dan is an extremely effective developer because his communication skills
+                  are as strong as his technical ability and he understands the value
+                  of flexibility and empathy when working in a team. He also has an infectious
+                  enthusiasm for the craft of software and picks up new languages, patterns,
+                  and technologies very quickly.
+                </em>
+              </blockquote>
+            </div>
           </div>
 
-          <div class="card">
-            <a href="https://www.linkedin.com/in/jeremiahatwood/" target="_blank">
-              <h3>
-                <strong>Jeremiah Atwood</strong>
-                <i class="fab fa-linkedin"></i>
-              </h3>
+          <div class="card hidden">
+            <div class="vertical-align-wrapper">
+              <a href="https://www.linkedin.com/in/jeremiahatwood/" target="_blank">
+                <h3>
+                  <strong>Jeremiah Atwood</strong>
+                  <i class="fab fa-linkedin"></i>
+                </h3>
 
-              <h5>Web Platform Lead at Raizlabs</h5>
-            </a>
+                <h5>Web Platform Lead at Raizlabs</h5>
+              </a>
 
-            <blockquote>
-              <em>
-                Dan is an avid technologist who is always teaching himself new concepts
-                and technologies. On a recent Android and API project, he jumped in and
-                took over the API work, working directly with client developers to deliver
-                an ambitious product. Dan was also instrumental in kicking off an initiative
-                to record our internal Tech Talks and share them with the community.
-                His presentation on encryption was informative, well-researched, well-rehearsed
-                and demonstrated his grasp of a complex subject. Dan is definitely someone
-                you want on your team.
-              </em>
-            </blockquote>
+              <blockquote>
+                <em>
+                  Dan is an avid technologist who is always teaching himself new concepts
+                  and technologies. On a recent Android and API project, he jumped in and
+                  took over the API work, working directly with client developers to deliver
+                  an ambitious product. Dan was also instrumental in kicking off an initiative
+                  to record our internal Tech Talks and share them with the community.
+                  His presentation on encryption was informative, well-researched, well-rehearsed
+                  and demonstrated his grasp of a complex subject. Dan is definitely someone
+                  you want on your team.
+                </em>
+              </blockquote>
+            </div>
           </div>
 
-          <div class="card">
-            <a href="https://www.linkedin.com/in/mattbuckley1/" target="_blank">
-              <h3>
-                <strong>Matt Buckley</strong>
-                <i class="fab fa-linkedin"></i>
-              </h3>
+          <div class="card hidden">
+            <div class="vertical-align-wrapper">
+              <a href="https://www.linkedin.com/in/mattbuckley1/" target="_blank">
+                <h3>
+                  <strong>Matt Buckley</strong>
+                  <i class="fab fa-linkedin"></i>
+                </h3>
 
-              <h5>Mobile Engineer at Raizlabs</h5>
-            </a>
+                <h5>Mobile Engineer at Raizlabs</h5>
+              </a>
 
-            <blockquote>
-              <em>
-                Dan consistently delivers high-quality code, asking probing questions
-                to clarify requirements and ensuring that features are completed to
-                spec and ahead of schedule. He boasts a wide-ranging skill set. Given
-                a set of requirements, Dan draws on expertise in Ruby, JavaScript, and
-                Elixir. He's friendly, fun-loving, and a true asset to any engineering
-                team. I'd gladly work with Dan again any time.
-              </em>
-            </blockquote>
+              <blockquote>
+                <em>
+                  Dan consistently delivers high-quality code, asking probing questions
+                  to clarify requirements and ensuring that features are completed to
+                  spec and ahead of schedule. He boasts a wide-ranging skill set. Given
+                  a set of requirements, Dan draws on expertise in Ruby, JavaScript, and
+                  Elixir. He's friendly, fun-loving, and a true asset to any engineering
+                  team. I'd gladly work with Dan again any time.
+                </em>
+              </blockquote>
+            </div>
           </div>
+
+          <ul id="recommendation-toggle">
+            <li>
+              <a href="javascript:void(0)">
+                <i class="fas fa-circle" data-card-number=0></i>
+              </a>
+            </li>
+
+            <li>
+              <a href="javascript:void(0)">
+                <i class="far fa-circle" data-card-number=1></i>
+              </a>
+            </li>
+
+            <li>
+              <a href="javascript:void(0)">
+                <i class="far fa-circle" data-card-number=2></i>
+              </a>
+            </li>
+          </ul>
         </div>
       </section>
 
@@ -181,23 +209,50 @@
           <h1>Talks</h1>
 
           <div class="card">
-            <iframe
-               class="video"
-               src="https://player.vimeo.com/video/217214978"
-               width="640"
-               height="360"
-               allowfullscreen>
-            </iframe>
+            <div class="vertical-align-wrapper">
+              <iframe
+                 class="video"
+                 src="https://player.vimeo.com/video/217214978"
+                 width="640"
+                 height="360"
+                 allowfullscreen>
+              </iframe>
 
-            <p>
-              A math-light explanation of one of the core technologies of the internet:
-              public key cryptography. We'll use visuals and metaphors from Brit Cruise's
-              <a href="https://www.youtube.com/user/ArtOfTheProblem" target="_blank">
-                 Art of the Problem</a> video series on YouTube to explore this topic in-depth.
-            </p>
+              <p>
+                A math-light explanation of one of the core technologies of the internet:
+                public key cryptography. We'll use visuals and metaphors from Brit Cruise's
+                <a href="https://www.youtube.com/user/ArtOfTheProblem" target="_blank">
+                   Art of the Problem</a> video series on YouTube to explore this topic in-depth.
+              </p>
+            </div>
           </div>
         </div>
       </section>
     </main>
+    <script>
+      document.addEventListener("DOMContentLoaded", function(_event) {
+        var buttons = document.querySelectorAll("#recommendation-toggle i");
+        var cards   = document.querySelectorAll("#recommendations .card");
+
+        var toggleRecommendation = function(event) {
+          for (var i = 0; i < buttons.length; i++) {
+            buttons[i].classList.remove('fas');
+            buttons[i].classList.add('far');
+
+            cards[i].classList.add('hidden');
+          }
+
+          var clickedButton = event.currentTarget;
+          var cardNumber = clickedButton.getAttribute("data-card-number");
+
+          clickedButton.classList.add('fas');
+          cards[cardNumber].classList.remove('hidden');
+        };
+
+        for (var i = 0; i < buttons.length; i++) {
+          buttons[i].addEventListener('click', toggleRecommendation, false);
+        }
+      });
+    </script>
   </body>
 </html>
